<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitterApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Twitter</string>

    <!-- Welcome screen -->
    <string name="welcome_hello">Hello.</string>
    <string name="welcome_welcome_msg">Welcome to Twitter.</string>
    <string name="welcome_button_signup">Sign up</string>
    <string name="welcome_button_signin">Sign in</string>

    <!-- Login Layout -->
    <string name="login_title">Login. Here we go!</string>
    <string name="login_hint_email_address">E-mail address</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgot_password_text">I forgot my password</string>
    <string name="login_cancel_button_text">Cancel</string>
    <string name="login_login_button_text">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_bar_title_home">Home </string>
    <string name="title_activity_create_tweet">CreateTweetActivity</string>

    <!-- Create Tweet -->
    <string name="create_tweet_text_hint">What\'s happening\?</string>
    <string name="button_tweet_text">Tweet</string>
    <string name="title_activity_tweet_details">TweetDetailsActivity</string>
    <string name="reply_to_tweet_text_hint">Reply to </string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="tab_home">HOME</string>
    <string name="tab_mentions">MENTIONS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_profile">Profile</string>

</resources>
