<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="prafulmantale.praful.com.twitterapp.activities.Welcome"
    android:background="@drawable/login_background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_hello"
        android:id="@+id/tvHello_Welcome"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="35dp"
        android:textStyle="normal"
        android:textSize="30sp"
        android:padding="1dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_welcome_msg"
        android:id="@+id/tvWelcomeMsg_Welcome"
        android:layout_below="@+id/tvHello_Welcome"
        android:layout_alignLeft="@+id/tvHello_Welcome"
        android:layout_alignStart="@+id/tvHello_Welcome"
        android:layout_marginTop="1dp"
        android:textStyle="normal"
        android:gravity="center"
        android:padding="1dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/tvWelcomeMsg_Welcome"
        android:layout_margin="5dp"
        android:id="@+id/loginLayout"
        android:visibility="visible"
        android:background="#57160107"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:id="@+id/tvLoginLabel"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textStyle="normal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etEmailAddress"
            android:layout_below="@+id/tvLoginLabel"
            android:layout_marginTop="1dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/login_hint_email_address"
            android:textSize="14sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:layout_below="@+id/etEmailAddress"
            android:layout_marginTop="4dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textPassword"
            android:hint="@string/login_hint_password"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/login_cancel_button_text"
            android:background="@drawable/signin_button_style"
            style="@style/SignButtons"
            android:layout_below="@+id/etPassword"
            android:layout_alignLeft="@id/tvLoginLabel"
            android:layout_marginLeft="-25dp"
            android:onClick="onSignButtonClick"
            android:layout_marginTop="1dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login_login_button_text"
            android:background="@drawable/signup_button_style"
            style="@style/SignButtons"
            android:layout_alignTop="@+id/btnCancel"
            android:layout_toRightOf="@id/btnCancel"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="1dp"
            android:onClick="onLoginRequested"
            />

    </RelativeLayout>

    <LinearLayout

        android:id="@+id/footerRow_welcome"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="#ffdddddd"
        android:gravity="center">

        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/welcome_button_signup"
            android:textColor="@android:color/white"
            android:layout_gravity="bottom"
            style="@style/SignButtons"
            android:background="@drawable/signup_button_style"
            android:onClick="onSignButtonClick"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:text="@string/welcome_button_signin"
            android:layout_gravity="bottom"
            android:layout_marginLeft="40dp"
            style="@style/SignButtons"
            android:background="@drawable/signin_button_style"
            android:onClick="onLoginRequested"
            />
    </LinearLayout>
</RelativeLayout>
